tests/test_files/invalid/syntax/tos_misspelled.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

TransportrderStep tosProduction1
    Location production1
End
